--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <title id="title">Color Guess</title>
 </head>
 <body>
-    <header id="title"></header>
+    <header>
+        <h1 id="rgb-color">(168, 34, 1)</h1>
+    </header>
     
 </body>
 </html>
