--- a/index.html
+++ b/index.html
@@ -1,15 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title id="title">Color Guess</title>
-</head>
-<body>
-    <header>
-        <h1 id="rgb-color">(168, 34, 1)</h1>
-    </header>
-    
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="style.css">
+        <title id="title">Color Guess</title>
+    </head>
+    <body>
+        <header>
+            <h1 id="rgb-color">(168, 34, 1)</h1>
+        </header>
+        <section>
+            <div class="ball" id="circulo1">
+                <div class="ball" id="circulo2">
+                    <div class="ball" id="circulo3">
+                        <div class="ball" id="circulo4">
+                            <div class="ball" id="circulo5">
+                                <div class="ball" id="circulo6">
+
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <script src="script.js"></script>
+
+
+    </body>
 </html>
