--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     </head>
     <body>
         <header>
-            <h1 id="rgb-color">(168, 34, 1)</h1>
+            <h1>Faça sua jogada</h1>
+            <h2 id="rgb-color">(168, 34, 1)</h2>
         </header>
         <section>
             <div class="ball" id="circulo1">
