--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     </head>
     <body>
         <header>
-            <h1>Faça sua jogada</h1>
-            <h2 id="rgb-color">(168, 34, 1)</h2>
+            <h1 id="answer">"Escolha uma cor"</h1>
+            <h2 id="rgb-color"></h2>
         </header>
         <section>
             <div class="ball" id="circulo1">
@@ -27,6 +27,10 @@
                 </div>
             </div>
         </section>
+        <div id="botao">
+            <button type="button" id="reset-game">RESET</button>
+        </div>
+        
         <script src="script.js"></script>
 
 
