atualização do click nas bolas

--- a/index.html
+++ b/index.html
@@ -9,23 +9,18 @@
     </head>
     <body>
         <header>
-            <h1 id="answer">"Escolha uma cor"</h1>
-            <h2 id="rgb-color"></h2>
+            <h1 id="answer">Escolha uma cor</h1>
         </header>
-        <section>
-            <div class="ball" id="circulo1">
-                <div class="ball" id="circulo2">
-                    <div class="ball" id="circulo3">
-                        <div class="ball" id="circulo4">
-                            <div class="ball" id="circulo5">
-                                <div class="ball" id="circulo6">
-
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
+        <div id="placar">
+            Placar: <span id="score" type="number">0</span>
+        </div>
+        <section id="sessao">
+            <li class="ball"></li>
+            <li class="ball"></li>
+            <li class="ball"></li>
+            <li class="ball"></li>
+            <li class="ball"></li>
+            <li class="ball"></li>
         </section>
         <div id="botao">
             <button type="button" id="reset-game">RESET</button>
